--- a/mixspace/templates/music/index.html
+++ b/mixspace/templates/music/index.html
@@ -45,7 +45,7 @@
                             <a class="nav-item">Liked</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Log out</a>
+                            <a class="nav-link" href="{% url 'log_out' %}">Log out</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
@@ -80,7 +80,8 @@
 
     <div id="log-in">
         <h1 class="h1-pos">Log in.</h1>
-        <form method="post" class="d-flex align-items-center flex-column p-4" id="log-in-form">
+        <form method="post" action="{% url 'log_in' %}" class="d-flex align-items-center flex-column p-4" id="log-in-form">
+            {% csrf_token %}
             <div class="form-floating mb-3 d-flex align-items-center flex-column">
                 {% render_field log_in_form.login class="form-control field-width" placeholder="Login" %}
                 <label for="id_login" class="form-label">Login</label>
@@ -89,7 +90,7 @@
                 {% render_field log_in_form.password class="form-control field-width" placeholder="Password" %}
                 <label for="id_password" class="form-label">Password</label>
             </div>
-            <button type="submit" class="btn btn-outline-primary submit log-in-btn" name="submit">Log in</button>
+            <button type="submit" class="btn btn-outline-primary submit log-in-btn" name="logIn">Log in</button>
         </form>
         <p class="sign-up-redirect">Don't have account yet? <span id="login-to-redirect-btn">Sign up</span> then!</p>
     </div>
@@ -97,7 +98,7 @@
     <div id="sign-up">
         <h1 class="h1-pos">Sign up.</h1>
         <p class="text-warning" id="upload-info"></p>
-        <form method="post" class="d-flex align-items-center flex-column p-4" id="sign-up-form" autocomplete="off">
+        <form method="post" action="{% url 'sign_up' %}" class="d-flex align-items-center flex-column p-4" id="sign-up-form" autocomplete="off">
             {% csrf_token %}
             <div class="form-floating mb-3">
                 {% render_field sign_up_form.email class="form-control field-width" placeholder="Email" %}
@@ -124,7 +125,7 @@
                 <label for="id_username" class="form-label">Confirm password</label>
             </div>
 
-            <button type="submit" class="btn btn-outline-primary submit sign-up-btn" name="submit">Sign up</button>
+            <button type="submit" class="btn btn-outline-primary submit sign-up-btn" name="signUp">Sign up</button>
         </form>
     </div>
 
@@ -150,7 +151,7 @@
             </div>
     
             {% if user.is_authenticated %}
-                <button type="submit" class="btn btn-outline-primary submit upload-btn" name="submit">Upload</button>
+                <button type="submit" class="btn btn-outline-primary submit upload-btn" name="upload">Upload</button>
             {% else %}
                 <button class="btn btn-outline-primary submit upload-btn" type="button" id="upload-to-register-btn">Upload</button>
             {% endif %}
