--- a/mixspace/static/music/css/styles.css
+++ b/mixspace/static/music/css/styles.css
@@ -20,32 +20,84 @@ body {
     font-size: 2em;
     margin-bottom: -0.1em;
 }
+  
+.card {
+    height: 13em;
+    width: 17em;
+    margin-bottom: 1em;
+    border-radius: 3px;
+    transition: all 200ms ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+  
+.card:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+  
+.card-actions {
+    margin-top: 1em;
+}
+  
+.skeleton-card {
+    height: 13em;
+    width: 17em;
+    border-radius: 3px;
+    transition: all 200ms ease-in-out;
+    position: relative;
+    background-color: #eaeaea;
+}
+  
+.skeleton-card::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.5) 60%, rgba(255, 255, 255, 0));
+    animation: load 1s infinite;
+}
+  
+@keyframes load {
+    100% {
+      transform: translateX(100%);
+    }
+}
+  
+@media screen and (prefers-reduced-motion: reduce) {
+    .skeleton-card::after {
+      animation: none;
+    }
+}
 
 .field-width {
     width: 17em;
-    margin-bottom: 1em;
 }
 
 .password-form-text {
-    margin: -0.8em 2.3em 0em 0em;
+    margin: -0.8em 2.3em -1em 0em;
+    display: none;
 }
 
-.pass-2 {
-    margin-top: 1em;
+.username-form-text {
+    margin: -0.8em 1.5em -1em 0em;
+    display: none;
 }
 
 .title-form-text {
-    margin-top: -2em;
+    margin-top: -0.8em;
     margin-right: 2.2em;
+    display: none;
 }
 
 .file-form-text {
-    margin-top: -0.8em;
+    margin-top: 0.3em;
     margin-right: 2.8em;
-}
-
-#log-in-form *, #sign-up-form * {
-    margin-bottom: -0em;
+    display: none;
 }
 
 .submit {
@@ -82,6 +134,11 @@ body {
 
 .upload-btn {
     margin-right: 12.3em;
+    margin-top: 1em;
+}
+
+.u-genre-input {
+    margin-bottom: 1em;
 }
 
 footer p {
@@ -98,10 +155,10 @@ footer p {
     color: #0d6efd;
 }
 
-/* #home-page {
+#home-page {
     display: block;
 }
 
 #log-in, #sign-up, #upload, #user-page {
     display: none;
-} */
+}
