--- a/mixspace/static/music/css/styles.css
+++ b/mixspace/static/music/css/styles.css
@@ -20,58 +20,56 @@ body {
     font-size: 2em;
     margin-bottom: -0.1em;
 }
-  
+
+.track-title {
+    font-size: 0.8em;
+}
+
+.track-title, .track-artist {
+    color: black;
+    text-decoration: none;
+}
+
 .card {
     height: 13em;
     width: 17em;
     margin-bottom: 1em;
-    border-radius: 3px;
-    transition: all 200ms ease-in-out;
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    background-color: rgb(210, 218, 255);
+    justify-content: space-between;
+    padding: 1em;
+    border-radius: 3px;
+    transition: all 200ms ease-in-out 0s;
 }
-  
+
+.card-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.track-artist {
+    font-size: 0.7em;
+}
+
+.track-genre {
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+.track-datetime {
+    font-size: 0.8em;
+    margin-top: -1em;
+    margin-bottom: 0.6em;
+}
+
 .card:hover {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
-  
-.card-actions {
-    margin-top: 1em;
-}
-  
-.skeleton-card {
-    height: 13em;
-    width: 17em;
-    border-radius: 3px;
-    transition: all 200ms ease-in-out;
-    position: relative;
-    background-color: #eaeaea;
-}
-  
-.skeleton-card::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateX(-100%);
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.5) 60%, rgba(255, 255, 255, 0));
-    animation: load 1s infinite;
-}
-  
-@keyframes load {
-    100% {
-      transform: translateX(100%);
-    }
-}
-  
-@media screen and (prefers-reduced-motion: reduce) {
-    .skeleton-card::after {
-      animation: none;
-    }
+
+.pagination-parent {
+    margin-top: -1em;
 }
 
 .field-width {
