--- a/mixspace/templates/music/index.html
+++ b/mixspace/templates/music/index.html
@@ -19,7 +19,7 @@
                     <path d="M8 12a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                     <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm1 2h6a1 1 0 0 1 1 1v2.5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm3 12a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                 </svg>
-                <a class="navbar-brand mb-1 h1">mix-space</a>
+                <a class="navbar-brand mb-1 h1" href="{% url 'index' %}">mix-space</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -80,19 +80,67 @@
     <div id="home-page">
         <h1 class="h1-pos">Last added tracks.</h1>
         <div class="d-flex align-items-center flex-column p-4">
-            <div id="card-container">
-            </div>
-            <div id="loader">
-            <div class="skeleton-card"></div>
-            </div>
-            <div class="card-actions">
-            <span>Showing 
-                <span id="card-count"></span> of 
-                <span id="card-total"></span> last added tracks.      
-            </span>
-            </div>
+            {% for track in page_obj %}
+                <article class="card">
+                    <h3><a href="" class="track-title">{{track.title}}</a></h3>
+                    <div class="card-bottom">
+                        <h4><a href="" class="track-artist">{{track.artist}}</a></h4>
+                        <div>
+                            <p class="track-genre">{{track.genre}}</p>
+                            <p class="track-datetime">{{track.time_added | date:"d M Y"}}</p>
+                        </div>
+                    </div>   
+                </article>
+            {% endfor %}
         </div>
     </div>
+
+    <nav class="pagination-parent">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page=1">1</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Previous</a>
+                </li>
+                <li class="page-item active">
+                    <a class="page-link" href="?page=1">1</a>
+                </li>
+            {% endif %}
+            {% if page_obj.has_previous and page_obj.has_next %}
+                <li class="page-item active">
+                    <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}</a>
+                </li>
+            {% endif %}
+
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link"
+                       href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                </li>
+            {% elif page_obj.paginator.num_pages is 1 %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            {% else %}
+                <li class="page-item active">
+                    <a class="page-link"
+                       href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
 
     {% if not user.is_authenticated %}
         <div id="log-in">
