--- a/mixspace/templates/music/index.html
+++ b/mixspace/templates/music/index.html
@@ -87,7 +87,7 @@
                         <h4><a href="" class="track-artist">{{track.artist}}</a></h4>
                         <div>
                             <p class="track-genre">{{track.genre}}</p>
-                            <p class="track-datetime">{{track.time_added | date:"d M Y"}}</p>
+                            <p class="track-datetime">{{track.time_added | date:"d M Y"}}, {{track.time_added | time:"H:i"}}</p>
                         </div>
                     </div>   
                 </article>
