--- a/mixspace/templates/music/user_profile.html
+++ b/mixspace/templates/music/user_profile.html
@@ -2,16 +2,15 @@
 {% load static %}
 {% load widget_tweaks %}
 
-{% block title %}- home{% endblock %}
+{% block title %}- user.username{% endblock %}
 
 {% block body %}
-    {% if user.is_authenticated %}
-        <h3 class="h1-pos">Hello, <span id="user-username">{{ user.username | truncatechars:21 }}</span>.</h3>
-        <p id="get-current-user" style="display: none;">{{ user.username }}</p>
-    {% else %}
-        <h2 class="h1-pos">Don't have account yet? <br> <a id="home-to-register-btn" href="{% url 'sign_up' %}">Sign up!</a></h2>
-    {% endif %}
-    <h1 class="h1-pos">Last added tracks.</h1>
+    <div class="d-flex align-items-center flex-column p-4">
+        <div class="d-flex align-items-center flex-column p-4">
+            <h1 class="h1-pos">{{ username | truncatechars:21 }}</h1>
+            <div class="default-avatar" style="margin-top: 0.5em;"></div>
+        </div>
+    </div>
     <div class="d-flex justify-content-center flex-wrap p-4 cards-parent">
         {% for track in page_obj %}
             <article class="card">
