--- a/mixspace/templates/music/user_profile.html
+++ b/mixspace/templates/music/user_profile.html
@@ -2,15 +2,19 @@
 {% load static %}
 {% load widget_tweaks %}
 
-{% block title %}- user.username{% endblock %}
+{% block title %}- {{username}}{% endblock %}
 
 {% block body %}
-    <div class="d-flex align-items-center flex-column p-4">
-        <div class="d-flex align-items-center flex-column p-4">
-            <h1 class="h1-pos">{{ username | truncatechars:21 }}</h1>
-            <div class="default-avatar" style="margin-top: 0.5em;"></div>
+    <div class="d-flex align-items-center flex-column p-4 user-box">
+        <h1 class="h1-pos username-h1">{{ username | truncatechars:21 }}</h1>
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="default-avatar d-flex justify-content-center align-items-center" style="margin-top: 0.5em;">avatar</div>
+            <form method="post" action="{% url 'follow' username=username %}" id="followForm" class="d-flex align-items-center flex-column">
+                {% csrf_token %}
+            </form>
         </div>
     </div>
+
     <div class="d-flex justify-content-center flex-wrap p-4 cards-parent">
         {% for track in page_obj %}
             <article class="card">
@@ -22,7 +26,7 @@
                         <p class="track-genre">{{track.genre}}</p>
                         <p class="track-datetime">{{track.time_added | date:"d M Y"}}, {{track.time_added | time:"H:i"}}</p>
                     </div>
-                </div>   
+                </div>
             </article>
         {% endfor %}
     </div>
@@ -73,4 +77,7 @@
             {% endif %}
         </ul>
     </nav>
+    {% if username != user.username %}
+        <script src="{% static 'music/js/userProfile.js' %}"></script>
+    {% endif %}
 {% endblock %}
