--- a/mixspace/templates/music/layout.html
+++ b/mixspace/templates/music/layout.html
@@ -39,7 +39,7 @@
                                 <a class="nav-link" id="nav-upload-btn" href="{% url 'upload' %}">Upload</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">Following</a>
+                                <a class="nav-link" href="{% url 'following' %}">Following</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link">Liked</a>
