--- a/mixspace/static/music/css/styles.css
+++ b/mixspace/static/music/css/styles.css
@@ -214,3 +214,12 @@ footer p {
     background-color: #dc3545;
     color: #fff;
 }
+
+#likeForm {
+    position: absolute;
+    bottom: 2em;
+}
+
+#likesCount {
+    margin-left: 0.2em;
+}
