add working liked page

--- a/mixspace/templates/music/layout.html
+++ b/mixspace/templates/music/layout.html
@@ -42,7 +42,7 @@
                                 <a class="nav-link" href="{% url 'following' %}">Following</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link">Liked</a>
+                                <a class="nav-link" href="{% url 'liked' %}">Liked</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'log_out' %}">Log out</a>
