add menu highlighting

--- a/mixspace/templates/music/player.html
+++ b/mixspace/templates/music/player.html
@@ -23,7 +23,7 @@
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0z"/>
                     </svg>
                 </div>
-                <h2 class="track-title-player">{{ track.title | truncatechars:24 }}</h2>
+                <h2 class="track-title-player">{{ track.title }}</h2>
                 <h3 class="track-artist-player"><a class="track-artist-player" href="{% url 'user' username=track.artist %}">{{track.artist}}</a></h3>
             </div>
             <form method="post" action="{% url 'like' id=track.id %}" id="likeForm-player" class="d-flex">
