--- a/mixspace/templates/music/layout.html
+++ b/mixspace/templates/music/layout.html
@@ -39,10 +39,10 @@
                                 <a class="nav-link" id="nav-upload-btn" href="{% url 'upload' %}">Upload</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'following' %}">Following</a>
+                                <a class="nav-link" id="nav-following-btn" href="{% url 'following' %}">Following</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'liked' %}">Liked</a>
+                                <a class="nav-link" id="nav-liked-btn" href="{% url 'liked' %}">Liked</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'log_out' %}">Log out</a>
@@ -61,7 +61,7 @@
                     </ul>
                     <form class="d-flex search-form" role="search" id="search-nav">
                         <input class="form-control me-2" type="search" placeholder="Search for tracks"
-                            aria-label="Search">
+                            aria-label="Search" name="search">
                         <button class="btn btn-outline-dark" type="submit">Search</button>
                     </form>
                 </div>
@@ -69,8 +69,9 @@
         </nav>
         {% block body %}
         {% endblock %}
+        <script src="{% static 'music/js/menu.js' %}"></script>
         <footer>
-            <p><small>Copyrights © <a href="https://github.com/MateuszMasternak" class="github-redirect">Mateusz Masternak</a> 2022</small></p>
+            <p><small>Copyrights © <a href="https://github.com/MateuszMasternak" class="github-redirect">Mateusz Masternak</a> 2022</small>.</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     </body>
