make search bar working

--- a/mixspace/static/music/css/styles.css
+++ b/mixspace/static/music/css/styles.css
@@ -313,3 +313,9 @@ audio {
 .genre-date {
     user-select: none;
 }
+
+.empty-search {
+    text-align: center;
+    margin-top: 1em;
+    font-size: 1.5em;
+}
