add js to show and hide info about requirements in forms

--- a/mixspace/templates/music/upload.html
+++ b/mixspace/templates/music/upload.html
@@ -34,4 +34,5 @@
             <a class="btn btn-outline-primary submit upload-btn" type="button" id="upload-to-register-btn" href="{% url 'log_in' %}">Upload</a>
         {% endif %}
     </form>
+    <script src="{% static 'music/js/showInfo.js' %}"></script>
 {% endblock %}
