--- a/mixspace/static/music/css/styles.css
+++ b/mixspace/static/music/css/styles.css
@@ -84,12 +84,12 @@ body {
 }
 
 .password-form-text {
-    margin: -0.8em 2.3em -1em 0em;
+    margin: -0.8em 2.3em -0em 0em;
     display: none;
 }
 
 .username-form-text {
-    margin: -0.8em 1.5em -1em 0em;
+    margin: -0.8em 1.5em 0em 0em;
     display: none;
 }
 
@@ -102,6 +102,7 @@ body {
 .file-form-text {
     margin-top: 0.3em;
     margin-right: 2.8em;
+    margin-bottom: -1.5em;
     display: none;
 }
 
