--- a/mixspace/templates/music/sign_up.html
+++ b/mixspace/templates/music/sign_up.html
@@ -41,4 +41,5 @@
 
         <button type="submit" class="btn btn-outline-primary submit sign-up-btn" name="signUp">Sign up</button>
     </form>
+    <script src="{% static 'music/js/showInfo.js' %}"></script>
 {% endblock %}
