--- a/mixspace/templates/music/layout.html
+++ b/mixspace/templates/music/layout.html
@@ -52,7 +52,7 @@
                                 <a class="nav-link" id="nav-log-in-btn" href="{% url 'log_in' %}">Log in</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="nav-sing-up-btn" href="{% url 'sign_up' %}">Sign up</a>
+                                <a class="nav-link" id="nav-sign-up-btn" href="{% url 'sign_up' %}">Sign up</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="nav-upload-btn" href="{% url 'upload' %}">Upload</a>
