--- a/mixspace/templates/music/log_in.html
+++ b/mixspace/templates/music/log_in.html
@@ -6,6 +6,11 @@
 
 {% block body %}
     <h1 class="h1-pos">Log in.</h1>
+    <div class="errors">
+        {% if info %}
+            <p class="text-warning log-in-info">{{ info }}</p>
+        {% endif %}
+    </div>
     <p class="text-warning" id="upload-info"></p>
     <form method="post" action="{% url 'log_in' %}" class="d-flex align-items-center flex-column p-4" id="log-in-form">
         {% csrf_token %}
