--- a/mixspace/templates/music/layout.html
+++ b/mixspace/templates/music/layout.html
@@ -71,6 +71,8 @@
         {% block body %}
         {% endblock %}
         <script src="{% static 'music/js/menu.js' %}"></script>
+        <script src="{% static 'music/js/cards.js' %}"></script>
+        <script src="{% static 'music/js/closeMessage.js' %}"></script>
         <footer>
             <p><small>Copyrights © <a href="https://github.com/MateuszMasternak" class="github-redirect">Mateusz Masternak</a> 2022</small>.</p>
         </footer>
