--- a/mixspace/templates/music/sign_up.html
+++ b/mixspace/templates/music/sign_up.html
@@ -6,36 +6,8 @@
 
 {% block body %}
     <h1 class="h1-pos">Sign up.</h1>
-    <div class="errors">
-        {% if form.errors.email %}
-            <div class="form-text text-warning log-in-info">
-                {% for error in form.errors.email %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% if form.errors.username %}
-            <div class="form-text text-warning log-in-info">
-                {% for error in form.errors.username %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% if form.errors.password1 %}
-            <div class="form-text text-warning log-in-info">
-                {% for error in form.errors.password1 %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-        {% if form.errors.password2 %}
-            <div class="form-text text-warning log-in-info">
-                {% for error in form.errors.password2 %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-    </div>
+    {% include 'music/include/messages.html' %}
+
     <form method="post" action="{% url 'sign_up' %}" class="d-flex align-items-center flex-column p-4" id="sign-up-form" autocomplete="off">
         {% csrf_token %}
         <div class="form-floating mb-3">
