--- a/mixspace/templates/music/include/messages.html
+++ b/mixspace/templates/music/include/messages.html
@@ -3,23 +3,29 @@
         {% for message in messages %}
             {% if message.tags == 'success' %}
                 <div class="field-width alert alert-success alert-dismissible" role="alert">
-                    <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
-                    {{ message|safe|escape }}
+                    <div>
+                        <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
+                    </div>
+                    <div>
+                        {{ message|safe|escape }}
+                    </div>
                 </div>
             {% elif message.tags == 'error' %}
-                <div class="field-width alert alert-danger alert-dismissible" role="alert">
+                <div class="field-width alert alert-danger alert-dismissible d-flex justify-content-between" role="alert">
+                    <div>
+                        {{ message|safe|escape }}
+                    </div>
                     <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
-                    {{ message|safe|escape }}
                 </div>
             {% elif message.tags == 'info' %}
                 <div class="field-width alert alert-info alert-dismissible" role="alert">
-                    <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
                     {{ message|safe|escape }}
+                    <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
                 </div>
             {% elif message.tags == 'warning' %}
                 <div class="field-width alert alert-warning alert-dismissible" role="alert">
-                    <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
                     {{ message|safe|escape }}
+                    <span class="close" data-dismiss="alert" aria-label="close">&times;</span>
                 </div>
             {% endif %}
         {% endfor %}
