--- a/mixspace/static/music/css/styles.css
+++ b/mixspace/static/music/css/styles.css
@@ -382,10 +382,14 @@ audio {
 
 .close {
     position: absolute;
-    top: 0.5em;
-    right: 1em;
+    top: 0.3em;
+    right: 0.7em;
 }
 
 .close:hover {
     cursor: pointer;
+}
+
+.captcha {
+    margin-top: 0.8em;
 }
