--- a/mixspace/templates/music/sign_up.html
+++ b/mixspace/templates/music/sign_up.html
@@ -43,7 +43,9 @@
             <label for="id_username" class="form-label">Confirm password</label>
         </div>
 
-        <button type="submit" class="btn btn-outline-primary submit sign-up-btn" name="signUp">Sign up</button>
+        {{ form.captcha }}
+
+        <button type="submit" class="btn btn-outline-primary submit sign-up-btn captcha" name="signUp">Sign up</button>
     </form>
     <script src="{% static 'music/js/showInfo.js' %}"></script>
 {% endblock %}
